# Carapace

./: .mcp.json  Cargo.toml  LICENSE  OPERATIONS.md  README.md  SETUP.md  ai.carapace.gateway.agent.plist  ai.carapace.gmail-proxy.plist  config.dev.toml  install.sh
crates/carapace-client/: Cargo.toml
crates/carapace-client/src/: lib.rs
crates/carapace-daemon/: Cargo.toml
crates/carapace-daemon/src/: allowlist.rs  audit.rs  channel_handler.rs  config.rs  content_filter.rs  dead_letter.rs  handler.rs  main.rs  middleware.rs  protocol.rs  rate_limiter.rs  server.rs
crates/carapace-daemon/src/adapters/: gdocs.rs  gmail.rs  imsg.rs  mod.rs
crates/carapace-daemon/tests/: integration.rs  mock_imsg.sh
crates/carapace-shims/: Cargo.toml
crates/gdocs-proxy/: Cargo.toml
crates/gdocs-proxy/src/: auth.rs  config.rs  lib.rs  main.rs
crates/gdocs-proxy/src/docs/: client.rs  types.rs
crates/gdocs-proxy/src/proxy/: routes.rs
crates/gmail-proxy/: Cargo.toml  config.example.toml
crates/gmail-proxy/src/: auth.rs  config.rs  lib.rs  main.rs
crates/gmail-proxy/src/gmail/: client.rs  types.rs
crates/gmail-proxy/src/proxy/: routes.rs
crates/gmail-proxy/src/scrub/: content.rs  labels.rs  mod.rs  query.rs
docs/: 00-fresh-machine-setup.md  01-overview.md  02-architecture.md  03-security-model.md  04-setup-guide.md  05-configuration-reference.md  05-setup-main-account.md  06-protocol-spec.md  07-gmail-channel.md  08-gdocs-channel.md  08-shim-implementation.md  09-services-reference.md  10-operations-cheatsheet.md  11-claude-code-agents.md  11-troubleshooting.md  12-pitfalls-and-gotchas.md  12-roadmap.md  13-developer-guide.md  14-gmail-channel.md  14-troubleshooting.md  16-claude-code-migration-plan.md  17-multi-account-gmail.md  18-services-reference.md
docs/archive/: 01-overview.md  03-security-model.md  04-setup-carapace-user.md  05-setup-main-account.md  06-protocol-spec.md  07-daemon-implementation.md  09-channel-adapters.md  10-configuration-reference.md  12-roadmap.md  13-gateway-infrastructure.md  15-gmail-mcp-server.md  18-services-reference.md
