[package]
name = "carapace-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Carapace gateway daemon – Unix socket JSON-RPC server"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc = "0.2"
