[package]
name = "carapace-shims"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Carapace test shim – exercises the full gateway flow"

[[bin]]
name = "test-shim"
path = "src/bin/test_shim.rs"

[dependencies]
carapace-client = { path = "../carapace-client" }
serde_json.workspace = true
