[package]
name = "carapace-shims"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Carapace test shim – exercises the full gateway flow"

[[bin]]
name = "test-shim"
path = "src/bin/test_shim.rs"

[[bin]]
name = "imsg"
path = "src/bin/imsg_shim.rs"

[[bin]]
name = "gmail-mcp"
path = "src/bin/gmail_mcp.rs"

[dependencies]
carapace-client = { path = "../carapace-client" }
serde_json.workspace = true
clap.workspace = true
